css: fix wrapping, using normal white space and break-word
Wrong config was causing copy paste to lose style attributes, and ep_align
justify to not work properly.

--- a/src/static/css/iframe_editor.css
+++ b/src/static/css/iframe_editor.css
@@ -28,6 +28,14 @@ html.inner-editor {
   padding: 10px;
   overflow: hidden;
   background-color: white;
+
+  /* Be careful editing following rules. Longs words should not overflow, ep_align justify should work,
+     Test on chrome, firefox and safari... Copy / Paste a word inside a sentence should not add line-breaks
+     and preserve the style */
+  display: block; /* for safari and firefox, otherwise the break-word does not work */
+  white-space: normal;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 #innerdocbody, #sidediv {
   padding-top: 10px; /* Both must have same top padding, so line number are aligned with the rows */
@@ -66,38 +74,6 @@ body.mozilla, body.safari {
 }
 .safari div {
   padding-right: 1px; /* prevents the caret from disappearing on the longest line of the doc */
-}
-
-
-/* -------------- */
-/* -- WRAPPING -- */
-/* -------------- */
-
-body {
-  white-space: nowrap;
-  word-wrap: normal;
-}
-body.doesWrap {
-  display: block !important;
-  /* white-space: pre-wrap; */
-  /*
-    Must be pre-wrap to keep trailing spaces. Otherwise you get a zombie caret,
-    walking around your screen (see #1766).
-    WARNING: Enabling this causes Paste as plain text in Chrome to remove line breaks
-    this is probably undesirable
-    WARNING: This causes copy & paste events to lose bold etc. attributes
-    NOTE: The walking-zombie caret issue seems to have been fixed in FF upstream
-    so let's try diabling pre-wrap and see how we get on now.
-    For more details see: https://github.com/ether/etherpad-lite/issues/2574
-  */
-  word-wrap: break-word; /* fix for issue #1648 - firefox not wrapping long lines (without spaces) correctly */
-}
-.noprewrap{
-  white-space: normal;
-}
-body.doesWrap:not(.noprewrap) > div {
-  /* Related to #1766 */
-  white-space: pre-wrap;
 }
 
 
@@ -158,7 +134,6 @@ body.doesWrap:not(.noprewrap) > div {
 }
 #innerdocbody a {
   cursor: pointer !important;
-  white-space:pre-wrap;
 }
 body.grayedout {
   background-color: #eee !important
